Set up difficulty level input

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <button id='start'>START</button>
   </div>
   <div id='status'>
+    <span>Difficulty:</span>
+    <select id='difficulty'>
+      <option value="0" selected="selected">1</option>
+      <option value="1" >2</option>
+      <option value="2">3</option>
+      <option value="3">4</option>
+    </select>
     <p id='turn'></p>
   </div>   
   <script src='scripts/main.js'></script>
