Set up difficulty level input

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <span>Difficulty:</span>
     <select id='difficulty'>
       <option value="0" selected="selected">1</option>
-      <option value="1" >2</option>
+      <option value="1">2</option>
       <option value="2">3</option>
       <option value="3">4</option>
+      <option value="4">Endless</option>
     </select>
     <p id='turn'></p>
   </div>   
