Add button styles

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div id='buttongrid'>
-    <button class='green' data-key='w'>W</button>
-    <button class='red' data-key='e'>E</button>
-    <button class='yellow' data-key='s'>S</button>
-    <button class='blue' data-key='d'>D</button>
+    <div class='green simonButton' data-key='w'>W</div>
+    <div class='red simonButton' data-key='e'>E</div>
+    <div class='yellow simonButton' data-key='s'>S</div>
+    <div class='blue simonButton' data-key='d'>D</div>
   </div>
   <div id='controls'>
     <button id='start'>START</button>
@@ -24,7 +24,6 @@
       <option value="3">4</option>
       <option value="4">Endless</option>
     </select>
-    <p id='turn'></p>
   </div>   
   <script src='scripts/main.js'></script>
 </body>
